--- a/index.html
+++ b/index.html
@@ -9,17 +9,11 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Sixteen Clothing HTML Template</title>
+    <title>Home - Qaeda Themes</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<!--
 
-TemplateMo 546 Sixteen Clothing
-
-https://templatemo.com/tm-546-sixteen-clothing
-
--->
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
@@ -44,7 +38,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Sixteen <em>Clothing</em></h2></a>
+          <a class="navbar-brand" href="index.html"><h2>Qaeda <em>Themes</em></h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -62,7 +56,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <a class="nav-link" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="career.html">Career</a>
               </li>
             </ul>
           </div>
@@ -77,19 +71,19 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="banner-item-01">
           <div class="text-content">
             <h4>Best Offer</h4>
-            <h2>New Arrivals On Sale</h2>
+            <h2>Apply Promo code</h2>
           </div>
         </div>
         <div class="banner-item-02">
           <div class="text-content">
-            <h4>Flash Deals</h4>
-            <h2>Get your best products</h2>
+            <h4>Best Offer</h4>
+            <h2>Apply Promo code</h2>
           </div>
         </div>
         <div class="banner-item-03">
           <div class="text-content">
-            <h4>Last Minute</h4>
-            <h2>Grab last minute deals</h2>
+            <h4>Best Offer</h4>
+            <h2>Apply Promo code</h2>
           </div>
         </div>
       </div>
@@ -101,7 +95,7 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Latest Products</h2>
+              <h2>Latest Themes For Blogger</h2>
               <a href="products.html">view all products <i class="fa fa-angle-right"></i></a>
             </div>
           </div>
@@ -109,9 +103,9 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="assets/images/product_01.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$25.75</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <a href="#"><h4>Daily Azad - A Responsible Blogger Template</h4></a>
+                <h6>$00.00</h6>
+                <p>Daily azad is a theme for Blogger (A Google Service).You can make your Websites using this theme. This template is very easy to work without touch to code.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -119,7 +113,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
                 </ul>
-                <span>Reviews (24)</span>
+                <span>Reviews (10)</span>
               </div>
             </div>
           </div>
@@ -127,9 +121,9 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="assets/images/product_02.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$30.25</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <a href="#"><h4>XEngineering College - A Responsible Blogger Template</h4></a>
+                <h6>$00.00</h6>
+                <p>XEngineering College is a theme for Blogger (A Google Service).You can make your Websites using this theme. This template is very easy to work without touch to code.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -137,7 +131,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
                 </ul>
-                <span>Reviews (21)</span>
+                <span>Reviews (11)</span>
               </div>
             </div>
           </div>
@@ -145,9 +139,9 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="assets/images/product_03.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$20.45</h6>
-                <p>Sixteen Clothing is free CSS template provided by TemplateMo.</p>
+                <a href="#"><h4>XSchool - A Responsible Blogger Template</h4></a>
+                <h6>$00.00</h6>
+                <p>XSchool is a theme for Blogger (A Google Service).You can make your Websites using this theme. This template is very easy to work without touch to code.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -163,9 +157,9 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="assets/images/product_04.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$15.25</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <a href="#"><h4>Nirpata - A Responsible Blogger Template</h4></a>
+                <h6>$00.00</h6>
+                <p>Nirpata is a theme for Blogger (A Google Service).You can make your Websites using this theme. This template is very easy to work without touch to code.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -173,7 +167,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
                 </ul>
-                <span>Reviews (48)</span>
+                <span>Reviews (10)</span>
               </div>
             </div>
           </div>
@@ -181,9 +175,9 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="assets/images/product_05.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$12.50</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <a href="#"><h4>Rodro Blog - A Responsible Blogger Template</h4></a>
+                <h6>$00.00</h6>
+                <p>Rodeo Blog is a theme for Blogger (A Google Service).You can make your Websites using this theme. This template is very easy to work without touch to code.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -191,7 +185,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
                 </ul>
-                <span>Reviews (16)</span>
+                <span>Reviews (6)</span>
               </div>
             </div>
           </div>
@@ -199,9 +193,9 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="assets/images/product_06.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$22.50</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <a href="#"><h4>Qaeda Shop - A Responsible Blogger Template</h4></a>
+                <h6>$00.00</h6>
+                <p>Qaeda Shop is a theme for Blogger (A Google Service).You can make your Websites using this theme. This template is very easy to work without touch to code.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -209,7 +203,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
                 </ul>
-                <span>Reviews (32)</span>
+                <span>Reviews (30)</span>
               </div>
             </div>
           </div>
@@ -222,19 +216,19 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>About Sixteen Clothing</h2>
+              <h2>All Services</h2>
             </div>
           </div>
           <div class="col-md-6">
             <div class="left-content">
               <h4>Looking for the best products?</h4>
-              <p><a rel="nofollow" href="https://templatemo.com/tm-546-sixteen-clothing" target="_parent">This template</a> is free to use for your business websites. However, you have no permission to redistribute the downloadable ZIP file on any template collection website. <a rel="nofollow" href="https://templatemo.com/contact">Contact us</a> for more info.</p>
+              <p><a rel="nofollow" href="#" target="_parent">Click Me</a> for buy<a rel="nofollow" href="#">Premium Themes</a> for low cost</p>
               <ul class="featured-list">
-                <li><a href="#">Lorem ipsum dolor sit amet</a></li>
-                <li><a href="#">Consectetur an adipisicing elit</a></li>
-                <li><a href="#">It aquecorporis nulla aspernatur</a></li>
-                <li><a href="#">Corporis, omnis doloremque</a></li>
-                <li><a href="#">Non cum id reprehenderit</a></li>
+                <li><a href="#">All Premium Blogger Templates</a></li>
+                <li><a href="#">All Premium WordPress Templates</a></li>
+                <li><a href="#">All Free Blogger Templates</a></li>
+                <li><a href="#">All Free WordPress Templates</a></li>
+                
               </ul>
               <a href="about.html" class="filled-button">Read More</a>
             </div>
@@ -256,8 +250,8 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="inner-content">
               <div class="row">
                 <div class="col-md-8">
-                  <h4>Creative &amp; Unique <em>Sixteen</em> Products</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque corporis amet elite author nulla.</p>
+                  <h4>Creative &amp; Unique <em>Qaeda</em> Themes</h4>
+                  <p>Make your website for free in Blogger.com using Qaeda Blogger Templates.</p>
                 </div>
                 <div class="col-md-4">
                   <a href="#" class="filled-button">Purchase Now</a>
@@ -275,9 +269,9 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="inner-content">
-              <p>Copyright &copy; 2020 Sixteen Clothing Co., Ltd.
+              <p>Copyright &copy; 2021 
             
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+            -  <a rel="nofollow noopener" href="#" target="_blank">Qaeda Themes</a></p>
             </div>
           </div>
         </div>
