--- a/about.html
+++ b/about.html
@@ -9,17 +9,11 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Sixteen Clothing - About Page</title>
+    <title>About - Qaeda Themes</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<!--
 
-TemplateMo 546 Sixteen Clothing
-
-https://templatemo.com/tm-546-sixteen-clothing
-
--->
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
@@ -62,7 +56,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <a class="nav-link" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="contact.html">Career</a>
               </li>
             </ul>
           </div>
@@ -90,7 +84,7 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Our Background</h2>
+              <h2>Story of Qaeda Themes</h2>
             </div>
           </div>
           <div class="col-md-6">
@@ -101,13 +95,11 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-6">
             <div class="left-content">
               <h4>Who we are &amp; What we do?</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat. Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis.</p>
-              <ul class="social-icons">
+              <p>The Arabic word 'Qaeda' means 'Primary'.Since Qaida Themes is an early start up, it is called Qaida Themes.</p>
+        <ul class="social-icons">
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-behance"></i></a></li>
-              </ul>
+                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                 </ul>
             </div>
           </div>
         </div>
@@ -120,7 +112,7 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Our Team Members</h2>
+              <h2>Team of Qaeda Themes</h2>
             </div>
           </div>
           <div class="col-md-4">
@@ -131,18 +123,16 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <div class="hover-content">
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                    </ul>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                       </ul>
                   </div>
                 </div>
               </div>
               <div class="down-content">
-                <h4>Johnny William</h4>
-                <span>CO-Founder</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
-              </div>
+                <h4>Syed Sakhawat Hossain</h4>
+                <span>CEO & Web Developer</span>
+                <p>Hey I'm Sakhawat Hossain Rodro.I'm currently reading in Computer Technology at Dhaka Polytechnic Institute, Bangladesh.I am born in Narsingdi, Bangladesh and I grew up in Mymensingh, Bangladesh</p>
+  </div>
             </div>
           </div>
           <div class="col-md-4">
@@ -155,16 +145,15 @@ https://templatemo.com/tm-546-sixteen-clothing
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                    </ul>
+                      </ul>
                   </div>
                 </div>
               </div>
               <div class="down-content">
-                <h4>Karry Pitcher</h4>
-                <span>Product Expert</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
-              </div>
+                <h4>Kaif Hossain</h4>
+                <span>Co-founder & Web Developer</span>
+                <p>Hey, I'm Kaif Hossain.I'm a Web Developer</p>
+    </div>
             </div>
           </div>
           <div class="col-md-4">
@@ -183,10 +172,10 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </div>
               </div>
               <div class="down-content">
-                <h4>Michael Soft</h4>
-                <span>Chief Marketing</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
-              </div>
+                <h4>Torikul Islam</h4>
+                <span>Graphics Designer</span>
+                <p>Hi,I am Torikul.I love my Work</p>
+  </div>
             </div>
           </div>
           <div class="col-md-4">
@@ -205,56 +194,13 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </div>
               </div>
               <div class="down-content">
-                <h4>Mary Cool</h4>
-                <span>Product Specialist</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
-              </div>
+                <h4>Mehedi Hasan</h4>
+                <span>Visual Designer</span>
+                <p>I am Mehedi.I am a Visual Designer</p>
+</div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/team_05.jpg" alt="">
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>George Walker</h4>
-                <span>Product Photographer</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/team_06.jpg" alt="">
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Kate Town</h4>
-                <span>General Manager</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing itaque corporis nulla.</p>
-              </div>
-            </div>
-          </div>
+          
         </div>
       </div>
     </div>
@@ -266,36 +212,36 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="service-item">
               <div class="icon">
-                <i class="fa fa-gear"></i>
+                <i class="fa fa-globe"></i>
               </div>
               <div class="down-content">
-                <h4>Product Management</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur an adipisicing elit. Itaque, corporis nulla at quia quaerat.</p>
-                <a href="#" class="filled-button">Read More</a>
+                <h4>Website Design and Development</h4>
+              <p>We make Website for our Clients</p>
+   <a href="#" class="filled-button">Read More</a>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="service-item">
               <div class="icon">
-                <i class="fa fa-gear"></i>
+                <i class="fa fa-mobile"></i>
               </div>
               <div class="down-content">
-                <h4>Customer Relations</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur an adipisicing elit. Itaque, corporis nulla at quia quaerat.</p>
-                <a href="#" class="filled-button">Details</a>
+                <h4>Blogger Theme Development</h4>
+                <p>We create Blogger Templates for Our Clients</p>
+ <a href="#" class="filled-button">Details</a>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="service-item">
               <div class="icon">
-                <i class="fa fa-gear"></i>
+                <i class="fa fa-laptop"></i>
               </div>
               <div class="down-content">
-                <h4>Global Collection</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur an adipisicing elit. Itaque, corporis nulla at quia quaerat.</p>
-                <a href="#" class="filled-button">Read More</a>
+                <h4>WordPress Theme Development</h4>
+                <p>Coming Soon</p>
+ <a href="#" class="filled-button">Read More</a>
               </div>
             </div>
           </div>
@@ -309,7 +255,7 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Happy Partners</h2>
+              <h2>Happy Clients</h2>
             </div>
           </div>
           <div class="col-md-12">
@@ -349,9 +295,9 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="inner-content">
-              <p>Copyright &copy; 2020 Sixteen Clothing Co., Ltd.
+              <p>Copyright &copy; 2022 
             
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+            -  <a rel="nofollow noopener" href="#" target="_blank">Qaeda Themes</a></p>
             </div>
           </div>
         </div>
