--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Career</a>
+                <a class="nav-link" href="career.html">Career</a>
               </li>
             </ul>
           </div>
