--- a/products.html
+++ b/products.html
@@ -97,7 +97,7 @@
                 <div class="row grid">
                     <div class="col-lg-4 col-md-4 all des">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/FB_IMG_1614225201882.jpg" alt=""></a>
+                        <a href="#"><img src="assets/images/download (11).png" alt=""></a>
                         <div class="down-content">
                           <a href="#"><h4>Daily Azad - A Responsible Blogger Template</h4></a>
                           
