--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/FB_IMG_1614225201882.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/download (11).png" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Daily Azad - A Responsible Blogger Template</h4></a>
                 
