--- a/career.html
+++ b/career.html
@@ -92,7 +92,7 @@
                 <div class="row grid">
                     <div class="col-lg-4 col-md-4 all des">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/#" alt=""></a>
+                        <a href="#"><img src="#" alt=""></a>
                         <div class="down-content">
                           <a href="#"><h4>Web Designer</h4></a>
                           <p>We need a Web Designer</p>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="col-lg-4 col-md-4 all dev">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/product_02.jpg" alt=""></a>
+                        <a href="#"><img src="#" alt=""></a>
                         <div class="down-content">
                           <a href="#"><h4>Visual Designer</h4></a>
                           <p>We need Some Visual Designer</p>
